# mousetail

./: .gitignore  .mcp.json  DOCS_SETUP.md  QUICKSTART.md  README.md  __init__.py  config.json  generate_docs.py  main.py  manifest.json  pyproject.toml  test_server.py
.github/workflows/: docs.yml
ankimcp/mcp/: server.py  stdio_server.py  tools.py
docs/: conf.py  index.html  index.rst  quickstart.rst
docs/api/: collection_manager.rst  index.rst  server.rst  tools.rst
mousetail/mcp/: server.py  tools.py
