[project]
name = "ankimcp"
version = "0.1.0"
description = "MCP server for Anki - enables LLMs to interact with Anki collections"
requires-python = ">=3.10"
dependencies = [
    "anki>=25.9.2",
    "mcp>=1.21.0",
]
authors = [
    { name = "Iain Land" }
]

[project.urls]
Repository = "https://github.com/yourusername/ankimcp"

[project.scripts]
ankimcp = "ankimcp.mcp.stdio_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["ankimcp"]
