[project]
name = "ankimcp"
version = "0.1.0"
description = "Standalone MCP server that enables LLMs like Claude to interact with Anki flashcard collections using Anki's Python library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anki>=25.9.2",
    "mcp>=1.21.0",
]

authors = [
    { name = "Iain Maitland" }
]
license = { text = "MIT" }
keywords = ["anki", "mcp", "model-context-protocol", "llm", "claude", "flashcards", "spaced-repetition"]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[project.urls]
Homepage = "https://listfold.github.io/ankimcp/"
Repository = "https://github.com/listfold/ankimcp"
Documentation = "https://listfold.github.io/ankimcp/"
Issues = "https://github.com/listfold/ankimcp/issues"

[project.scripts]
ankimcp = "ankimcp.mcp.stdio_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["ankimcp"]
